--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.66.1",
     "react-router": "^7.9.2",
     "tailwind-merge": "^3.4.0",
+    "textarea": "^0.3.0",
     "vaul": "^1.1.2",
     "zod": "^4.1.12"
   },
